[package]
name = "php_serde"
version = "0.6.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
description = "Serde support for PHP's serialization format."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/romand/serde_php-rs"
documentation = "https://docs.rs/php_serde"

[dependencies]
serde = { version = "1" }
smallvec = "1.6"
ryu = "1.0"

[dev-dependencies]
serde_bytes = "0.11.2"
serde = { version = "1.0.101", features = ["derive"] }
proptest = "1.0.0"
bson = "0.14.0"
tempfile = "3.2"
